--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <!--404-->
   <title>rmcsec</title>
+  <link rel="modulepreload" href="/js/writeups.js">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   <script type="module" src="/js/script.js"></script>
-  <script src="/js/writeups.js" type='module'></script>
   <style>
       @import url('/styles/style.css');
   </style>
