--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE HTML>
+<!--idk-->
 <html>
 <head>
-  <!--404-->
   <title>rmcsec</title>
   <link rel="modulepreload" href="/js/writeups.js">
+  <script type="text/javascript" src="/js/script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-  <script type="module" src="/js/script.js"></script>
+  <script type="module" src="/js/funs.js"></script>
   <style>
       @import url('/styles/style.css');
   </style>
@@ -18,7 +19,7 @@
 <body>
 
 <!--rmctf{h3ll0_7h3r3}-->
-
+<!--
   <div id="nav">
   <div class="navbar" id=navbar>  
         <ul>
@@ -30,6 +31,7 @@
         </ul>
   </div>
   </div>
+  -->
   <div id="content">
 
   </div>
@@ -61,5 +63,5 @@
 
 </body>
 <script src="/js/route.js" type='module'></script>
-<script type="module" src="/js/script.js"></script>
+<script type="module" src="/js/funs.js"></script>
 </html>
