--- a/pages/index.html
+++ b/pages/index.html
@@ -37,6 +37,9 @@
       <a href="/about" class="l">> ABOUT</a>
       <a href="/members" class="l">> MEMBERS</a>
       <a href="/writeups" class="l" id="lWriteups">> WRITEUPS</a> 
+      <a href="/" class="l" id="home">> HOME</a>
+      <a href="/about" class="l">> ABOUT</a>
+
     </div> 
     
 
