implemented back button

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
 </div>
     <footer style="animation: none; position: fixed;">
       <div>
-        <img id="bottomFlag" src="/img/mini.png" style="width: 3.8%; margin-top: 4%; padding-top: 2%; padding-left: 10%; display: inline-flex;">
+        <a href="/"><img id="bottomFlag" src="/img/mini.png" style="width: 3.8%; margin-top: 4%; padding-top: 2%; padding-left: 10%; display: inline-flex;"></a>
 
         <a class="footer-link" href="https://www.instagram.com/rm.csec/">
           <img src="/img/instagram.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; float: right; padding-right: 10%; display: inline-flex;">
