--- a/pages/index-mobile.html
+++ b/pages/index-mobile.html
@@ -95,7 +95,7 @@
           <img src="/img/github.svg" width="9%" style="margin-top: -1%; padding-top: 0%; padding-left: 3%; float: right; display: inline-flex;" hover>
         </a> 
 
-        <a class="footer-link" href="mailto:rm.cybersec@protonmail.com">
+        <a class="footer-link" href="mailto:rmcybersec@protonmail.com">
           <img src="/img/mail.svg" width="9%" style="margin-top: -1%; padding-top: 0%; padding-left: 3%; filter: invert(1); float: right; display: inline-flex;">
         </a>
 
