--- a/pages/about.html
+++ b/pages/about.html
@@ -33,7 +33,7 @@
           <img src="/img/github.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; float: right; display: inline-flex;" hover>
         </a> 
 
-        <a class="footer-link" href="mailto:rm.cybersec@protonmail.com">
+        <a class="footer-link" href="mailto:rmcybersec@protonmail.com">
           <img src="/img/mail.svg" width="3%" style="margin-top: 4%; padding-top: 2%; padding-left: 1%; filter: invert(1); float: right; display: inline-flex;">
         </a>
 
