Update about.html for sign up link

--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
   > Explore several cybersecurity concepts while solving challenges <br>
   > Short lessons on cybersecurity concepts with challneges you can practice <br>
   > Opportunities to participate in competitions and cybersecurity related events <br>
-  > Join now: <a href="https://docs.google.com/forms/d/16kNlapVRlJBpS-emV6a_L2hG76z0UQMfdWBvMfJ31lI">https://docs.google.com/forms/d/16kNlapVRlJBpS-emV6a_L2hG76z0UQMfdWBvMfJ31lI</a>
+  > Join now: <a href="https://forms.gle/jhvm9r6SZdYhP5V59">https://forms.gle/jhvm9r6SZdYhP5V59</a>
   </div>
 </div>
     <footer style="animation: none; position: fixed;">
