--- a/pages/members.html
+++ b/pages/members.html
@@ -31,6 +31,13 @@ b {
   ├── <b>Yegor K: Class of 2026 </b><br>
   └── <b>Cynthia L: Class of 2027 </b><br>
 </div>
+<div id="mem">
+  2025-2026 <br> 
+  ├── <b> Michael A: Class of 2027 </b><br>
+  ├── <b> Aahan G: Class of 2026 </b><br>
+  ├── <b> Zachary H: Class of 2027 </b><br> 
+  └── <b>Cynthia L: Class of 2027 </b><br>
+</div>
 <footer style="animation: none; position: fixed;">
   <div>
     <a href="/"><img id="bottomFlag" src="/img/mini.png" style="width: 3.8%; margin-top: 4%; padding-top: 2%; padding-left: 10%; display: inline-flex;"></a>
